<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/pauseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:text="@string/paused"
        android:textSize="22sp" />

    <Button
        android:id="@+id/playbutton"
        android:layout_width="172sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onPlayButtonClick"
        android:text="@string/resume" />

    <Button
        android:id="@+id/preferencesbutton"
        android:layout_width="172sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onSettingsButtonClick"
        android:text="@string/preferences" />

    <Button
        android:id="@+id/giveupbutton"
        android:layout_width="172sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onGiveUpButtonClick"
        android:text="@string/giveup" />

</LinearLayout>