<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/you_won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/you_won"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/time_to_win_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/time"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/time_to_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/enter_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/enter_your_name"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/nickname_input"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/nickname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/okbutton"
            android:layout_width="172sp"
            android:layout_height="wrap_content"
            android:onClick="onOkButtonClick"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>